--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -16,7 +16,7 @@
         'card-block-no-bottom': isCard()}">
         <h5 [class.card-title]="isCard()" class="card-block-no-bottom">
           <a [routerLink]="['/discussion', discussion.id]" class="link-unstyled">{{discussion.title}} </a>
-          <small *ngIf="isCreator"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditing()" tooltipPlacement="bottom" tooltip="Edit"></i></small>
+          <small *ngIf="isCreator"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditing()" placement="bottom" tooltip="Edit"></i></small>
         </h5>
       </div>
       <a *ngIf="isCard() && hasImage()"
@@ -52,29 +52,29 @@
           <li *ngIf="discussion.private_" class="tag tag-danger list-inline-item">Private</li>
           <li *ngIf="!isCreator" role="button" class="list-inline-item"
             (click)="toggleShowVoteSlider()"
-            tooltipPlacement="bottom" tooltip="Vote"><i class="fa fa-fw fa-star-half-o"></i></li>
+            placement="bottom" tooltip="Vote"><i class="fa fa-fw fa-star-half-o"></i></li>
           <li *ngIf="discussion.avgRank" class="tag tag-pill tag-default list-inline-item"
-            tooltipPlacement="bottom" tooltip="Average Score">
+            placement="bottom" tooltip="Average Score">
             {{discussion.avgRank}}</li>
           <li *ngIf="discussion.userRank" class="tag tag-pill tag-info list-inline-item"
-            tooltipPlacement="bottom" tooltip="Your Vote">
+            placement="bottom" tooltip="Your Vote">
             {{discussion.userRank}}</li>
           <li *ngIf="discussion.numberOfVotes" class="text-muted list-inline-item">
             <small> {{discussion.numberOfVotes}} votes</small></li>
           <li *ngIf="discussion.link" class="list-inline-item">
             <a class="link-unstyled" href="{{discussion.link}}"
               target="_blank"><i class="fa fa-external-link"
-              aria-hidden="true" tooltipPlacement="bottom" tooltip="Link"></i></a>
+              aria-hidden="true" placement="bottom" tooltip="Link"></i></a>
           </li>
           <li class="list-inline-item" role="button">
             <a [routerLink]="['/discussion', discussion.id]"
               class="link-unstyled">
-              <i class="fa fa-fw fa-comments-o" tooltipPlacement="bottom"
+              <i class="fa fa-fw fa-comments-o" placement="bottom"
                 tooltip="Comments"></i></a>
           </li>
           <li role="button" *ngIf="isCreator || isModerator"
             (click)="deleteDiscussion()" class="list-inline-item">
-            <i class="fa fa-fw fa-remove" tooltipPlacement="bottom"
+            <i class="fa fa-fw fa-remove" placement="bottom"
               tooltip="Delete"></i>
           </li>
         </ul>
