--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -4,5 +4,6 @@
 @import './app/styles/extras';
 @import '../node_modules/bootstrap/scss/bootstrap-flex';
 @import '../node_modules/angular2-toaster/lib/toaster';
+@import '../node_modules/font-awesome/css/font-awesome.css';
 @import './app/styles/card-columns';
 @import './app/styles/slider';
