--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -5,8 +5,8 @@
       <h3>Trending Discussions</h3>
       <small>
         <ul *ngIf="popularTags " class="list-inline ">trending tags:
-          <li class="tag tag-default list-inline-item "
-          *ngFor="let tag of popularTags ">
+          <li class="badge badge-default list-inline-item "
+          *ngFor="let badge of popularTags ">
             <a class="link-unstyled
         " [routerLink]="[ '/tag', tag.id] ">{{removeQuotes(tag.name)}}</a>
           </li>
@@ -14,7 +14,7 @@
       </small>
       <small>
         <ul *ngIf="popularCommunities " class="list-inline ">trending communities:
-          <li class="tag tag-primary list-inline-item "
+          <li class="badge badge-primary list-inline-item "
           *ngFor="let community of popularCommunities ">
             <a class="link-unstyled
         " [routerLink]="[ '/community', community.id] ">{{removeQuotes(community.name)}}</a>
@@ -43,10 +43,10 @@
   </div>
   <div class="row ">
     <div class="col-xs-12 ">
-      <i *ngIf="loadingDiscussions " class="fa fa-circle-o-notch
-        fa-spin fa-5x text-xs-center block "></i>
+      <i *ngIf="!loadingDiscussions " class="fa fa-circle-o-notch
+        fa-spin fa-5x text-center center-block "></i>
       <h4 *ngIf="discussions?.length==0
-        ">Subscribe to some communities such as <a class="link-unstyled tag tag-primary
+        ">Subscribe to some communities such as <a class="link-unstyled badge badge-primary
         " [routerLink]="[ '/community', 1] ">vanilla</a> to see discussions</h4>
     </div>
   </div>
