--- a/ui/src/app/components/tag/tag.component.html
+++ b/ui/src/app/components/tag/tag.component.html
@@ -12,7 +12,7 @@
   </div>
   <small *ngIf="communities?.length > 0">
     <ul class="list-inline trending-communities">trending communities:
-      <li class="tag tag-primary list-inline-item"
+      <li class="badge badge-primary list-inline-item"
           *ngFor="let community of communities">
         <a class="link-unstyled" [routerLink]="['/community', community.id]">{{removeQuotes(community.name)}}</a>
       </li>
@@ -26,7 +26,7 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
-      <i *ngIf="loadingDiscussions" class="fa fa-circle-o-notch fa-spin fa-5x text-xs-center block"></i>
+      <i *ngIf="loadingDiscussions" class="fa fa-circle-o-notch fa-spin fa-5x text-center block"></i>
       <h4 *ngIf="discussions?.length == 0">No Discussions</h4>
     </div>
   </div>
