--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -102,10 +102,6 @@ blockquote {
   font-weight: 900;
 }
 
-.navbar {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-}
-
 .ng-pristine.ng-invalid {
   box-shadow: none;
 }
@@ -140,6 +136,7 @@ a {
   .list-group .list-group-item:last-child {
     border-bottom: 0;
   }
+  margin-bottom: 10px;
 }
 
 .list-group-item:last-child {
