--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,8 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import './app/styles/custom';
 @import './app/styles/extras';
-@import '../node_modules/bootstrap/scss/bootstrap-flex';
-@import '../node_modules/angular2-toaster/lib/toaster';
+@import './app/styles/bootstrap';
+@import '../node_modules/angular2-toaster/toaster.css';
 @import './app/styles/card-columns';
 @import './app/styles/slider';
