Fix loading discussions loader

--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -43,7 +43,7 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-12">
-      <i *ngIf="!loadingDiscussions " class="fa fa-circle-o-notch
+      <i *ngIf="loadingDiscussions " class="fa fa-circle-o-notch
         fa-spin fa-5x fa-center"></i>
       <h4 *ngIf="discussions?.length==0
         ">Subscribe to some communities such as <a class="link-unstyled badge badge-primary
