--- a/ui/src/app/styles/_variables.scss
+++ b/ui/src/app/styles/_variables.scss
@@ -1,4 +1,4 @@
-// Minty 4.0.0
+// Litera 4.0.0
 // Bootswatch
 
 
@@ -104,18 +104,18 @@ $pink:   #ff5b77 !default;
 $purple: #613d7c !default;
 
 // Create grayscale
-$gray-dark:                 #5a5a5a;
-$gray:                      #888;
-$gray-light:                #aaa;
-$gray-lighter:              #eceeef !default;
+$gray-dark:                 #373a3c !default;
+$gray:                      #55595c !default;
+$gray-light:                #818a91 !default;
+$gray-lighter:              #ddd;
 $gray-lightest:             #f7f7f9 !default;
 
 // Reassign color vars to semantic color scheme
-$brand-primary:             #78C2AD;
-$brand-success:             #56CC9D;
-$brand-info:                #6CC3D5;
-$brand-warning:             #FFCE67;
-$brand-danger:              #FF7851;
+$brand-primary:             #19B5FE;
+$brand-success:             #02B875;
+$brand-info:                #19B5FE !default;
+$brand-warning:             #f0ad4e !default;
+$brand-danger:              #d9534f !default;
 $brand-inverse:             $gray-dark !default;
 
 
@@ -181,8 +181,8 @@ $sizes: (
 //
 // Settings for the `<body>` element.
 
-$body-bg:       #fff;
-$body-color:    $gray;
+$body-bg:       #fff !default;
+$body-color:    $gray-dark !default;
 $inverse-bg:    $gray-dark !default;
 $inverse-color: $gray-lighter !default;
 
@@ -244,12 +244,12 @@ $grid-gutter-widths: (
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
-$font-family-serif:      Georgia, "Times New Roman", Times, serif !default;
+$font-family-sans-serif: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
+$font-family-serif:      Georgia, Cambria, "Times New Roman", Times, serif;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:       $font-family-sans-serif !default;
 
-$font-size-base: 1rem !default;
+$font-size-base: 1.063rem;
 $font-size-lg:   1.25rem !default;
 $font-size-sm:   .875rem !default;
 $font-size-xs:   .75rem !default;
@@ -268,10 +268,10 @@ $font-size-h5: 1.25rem !default;
 $font-size-h6: 1rem !default;
 
 $headings-margin-bottom: ($spacer / 2) !default;
-$headings-font-family:   "Montserrat", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-$headings-font-weight:   500 !default;
+$headings-font-family:   "Raleway", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
+$headings-font-weight:   700;
 $headings-line-height:   1.1 !default;
-$headings-color:         $gray-dark;
+$headings-color:         inherit !default;
 
 $display1-size: 6rem !default;
 $display2-size: 5.5rem !default;
@@ -295,8 +295,8 @@ $abbr-border-color: $gray-light !default;
 
 $blockquote-small-color:  $gray-light !default;
 $blockquote-font-size:    ($font-size-base * 1.25) !default;
-$blockquote-border-color: #CCE8E0;
-$blockquote-border-width: .4rem;
+$blockquote-border-color: $gray-lighter !default;
+$blockquote-border-width: .25rem !default;
 
 $hr-border-color: rgba($black,.1) !default;
 $hr-border-width: $border-width !default;
@@ -318,9 +318,9 @@ $list-inline-padding: 5px !default;
 $line-height-lg:         (4 / 3) !default;
 $line-height-sm:         1.5 !default;
 
-$border-radius:          .4rem;
-$border-radius-lg:       .6rem;
-$border-radius-sm:       .3rem;
+$border-radius:          .25rem !default;
+$border-radius-lg:       .3rem !default;
+$border-radius-sm:       .2rem !default;
 
 $component-active-color: $white !default;
 $component-active-bg:    $brand-primary !default;
@@ -352,14 +352,14 @@ $table-head-bg:                 $gray-lighter !default;
 $table-head-color:              $gray !default;
 
 $table-border-width:            $border-width !default;
-$table-border-color:            rgba(0,0,0,0.05);
+$table-border-color:            rgba(0,0,0,0.1);
 
 
 // Buttons
 //
 // For each of Bootstrap's buttons, define text, background and border color.
 
-$btn-padding-x:                  1rem !default;
+$btn-padding-x:                  1.1rem;
 $btn-padding-y:                  .5rem !default;
 $btn-line-height:                1.25 !default;
 $btn-font-weight:                $font-weight-normal !default;
@@ -371,9 +371,9 @@ $btn-primary-color:              $white !default;
 $btn-primary-bg:                 $brand-primary !default;
 $btn-primary-border:             $btn-primary-bg !default;
 
-$btn-secondary-color:            #fff;
-$btn-secondary-bg:               #F3969A;
-$btn-secondary-border:           $btn-secondary-bg;
+$btn-secondary-color:            $gray-light;
+$btn-secondary-bg:               $white !default;
+$btn-secondary-border:           $gray-lighter;
 
 $btn-info-color:                 $white !default;
 $btn-info-bg:                    $brand-info !default;
@@ -393,7 +393,7 @@ $btn-danger-border:              $btn-danger-bg !default;
 
 $btn-link-disabled-color:        $gray-light !default;
 
-$btn-padding-x-sm:               .5rem !default;
+$btn-padding-x-sm:               .75rem;
 $btn-padding-y-sm:               .25rem !default;
 
 $btn-padding-x-lg:               1.5rem !default;
@@ -420,7 +420,7 @@ $input-bg:                       $white !default;
 $input-bg-disabled:              $gray-lighter !default;
 
 $input-color:                    $gray !default;
-$input-border-color:             rgba($black,.15) !default;
+$input-border-color:             rgba(0,0,0,.1);
 $input-btn-border-width:         $border-width !default; // For form controls and buttons
 $input-box-shadow:               inset 0 1px 1px rgba($black,.075) !default;
 
@@ -459,7 +459,7 @@ $form-check-inline-margin-x: .75rem !default;
 
 $form-group-margin-bottom:       $spacer-y !default;
 
-$input-group-addon-bg:           $gray-lighter !default;
+$input-group-addon-bg:           $gray-lightest;
 $input-group-addon-border-color: $input-border-color !default;
 
 $cursor-disabled:                not-allowed !default;
@@ -570,8 +570,8 @@ $dropdown-divider-bg:            $gray-lighter !default;
 $dropdown-box-shadow:            0 .5rem 1rem rgba($black,.175) !default;
 
 $dropdown-link-color:            $gray-dark !default;
-$dropdown-link-hover-color:      #fff;
-$dropdown-link-hover-bg:         #F3969A;
+$dropdown-link-hover-color:      darken($gray-dark, 5%) !default;
+$dropdown-link-hover-bg:         $gray-lightest !default;
 
 $dropdown-link-active-color:     $component-active-color !default;
 $dropdown-link-active-bg:        $component-active-bg !default;
@@ -603,7 +603,7 @@ $zindex-tooltip:            1070 !default;
 
 $navbar-border-radius:              $border-radius !default;
 $navbar-padding-x:                  $spacer !default;
-$navbar-padding-y:                  ($spacer / 2) !default;
+$navbar-padding-y:                  $spacer;
 
 $navbar-brand-padding-y:            .25rem !default;
 
@@ -613,16 +613,16 @@ $navbar-toggler-font-size:           $font-size-lg !default;
 $navbar-toggler-border-radius:       $btn-border-radius !default;
 
 $navbar-inverse-color:                 rgba(255,255,255,.6);
-$navbar-inverse-hover-color:           rgba(255,255,255,1) !default;
+$navbar-inverse-hover-color:           rgba(255,255,255,1);
 $navbar-inverse-active-color:          rgba(255,255,255,1) !default;
 $navbar-inverse-disabled-color:        rgba(255,255,255,.25) !default;
 $navbar-inverse-toggler-bg: str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$navbar-inverse-color}' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"), "#", "%23") !default;
 $navbar-inverse-toggler-border:        rgba($white,.1) !default;
 
-$navbar-light-color:                rgba(0,0,0,.3);
-$navbar-light-hover-color:          $headings-color;
-$navbar-light-active-color:         $headings-color;
-$navbar-light-disabled-color:       rgba(0,0,0,.1) !default;
+$navbar-light-color:                rgba(0,0,0,.5) !default;
+$navbar-light-hover-color:          $body-color;
+$navbar-light-active-color:         $body-color;
+$navbar-light-disabled-color:       rgba(0,0,0,.3) !default;
 $navbar-light-toggler-bg: str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$navbar-light-color}' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"), "#", "%23") !default;
 $navbar-light-toggler-border:       rgba($black,.1) !default;
 
@@ -659,22 +659,22 @@ $pagination-padding-x-lg:             1.5rem !default;
 $pagination-padding-y-lg:             .75rem !default;
 $pagination-line-height:              1.25 !default;
 
-$pagination-color:                     #fff;
-$pagination-bg:                        $brand-primary;
+$pagination-color:                     $link-color !default;
+$pagination-bg:                        $white !default;
 $pagination-border-width:              $border-width !default;
-$pagination-border-color:              $pagination-bg;
+$pagination-border-color:              #ddd !default;
 
-$pagination-hover-color:               #fff;
-$pagination-hover-bg:                  #F3969A;
-$pagination-hover-border:              $pagination-hover-bg;
+$pagination-hover-color:               $link-hover-color !default;
+$pagination-hover-bg:                  $gray-lighter !default;
+$pagination-hover-border:              #ddd !default;
 
 $pagination-active-color:              $white !default;
-$pagination-active-bg:                 #F3969A;
-$pagination-active-border:             $pagination-active-bg;
+$pagination-active-bg:                 $brand-primary !default;
+$pagination-active-border:             $brand-primary !default;
 
-$pagination-disabled-color:            #fff;
-$pagination-disabled-bg:               #CCE8E0;
-$pagination-disabled-border:           $pagination-disabled-bg;
+$pagination-disabled-color:            $gray-light !default;
+$pagination-disabled-bg:               $white !default;
+$pagination-disabled-border:           #ddd !default;
 
 
 // Jumbotron
@@ -689,20 +689,20 @@ $jumbotron-bg:                   $gray-lightest;
 
 $state-success-text:             #fff;
 $state-success-bg:               $brand-success;
-$state-success-border:           $state-success-bg;
+$state-success-border:           darken($state-success-bg, 5%) !default;
 
 $state-info-text:                #fff;
 $state-info-bg:                  $brand-info;
-$state-info-border:              $state-info-bg;
+$state-info-border:              darken($state-info-bg, 7%) !default;
 
 $state-warning-text:             #fff;
 $state-warning-bg:               $brand-warning;
 $mark-bg:                        $state-warning-bg !default;
-$state-warning-border:           $state-warning-bg;
+$state-warning-border:           darken($state-warning-bg, 5%) !default;
 
 $state-danger-text:              #fff;
 $state-danger-bg:                $brand-danger;
-$state-danger-border:            $state-danger-bg;
+$state-danger-border:            darken($state-danger-bg, 5%) !default;
 
 
 // Cards
@@ -766,7 +766,7 @@ $popover-arrow-outer-color:           fade-in($popover-border-color, .05) !defau
 
 // Badges
 
-$badge-default-bg:            $gray-light !default;
+$badge-default-bg:            $gray-lighter;
 $badge-primary-bg:            $brand-primary !default;
 $badge-success-bg:            $brand-success !default;
 $badge-info-bg:               $brand-info !default;
@@ -776,9 +776,9 @@ $badge-danger-bg:             $brand-danger !default;
 $badge-color:                 $white !default;
 $badge-link-hover-color:      $white !default;
 $badge-font-size:             75% !default;
-$badge-font-weight:           $font-weight-bold !default;
-$badge-padding-x:             .4em !default;
-$badge-padding-y:             .25em !default;
+$badge-font-weight:           normal;
+$badge-padding-x:             1.2em;
+$badge-padding-y:             .6em;
 
 $badge-pill-padding-x:        .6em !default;
 // Use a higher than normal value to ensure completely rounded edges when
@@ -878,7 +878,7 @@ $list-group-disabled-bg:         $gray-lightest;
 $list-group-disabled-text-color: $list-group-disabled-color !default;
 
 $list-group-link-color:          $gray !default;
-$list-group-link-heading-color:  $gray-dark !default;
+$list-group-link-heading-color:  #333 !default;
 $list-group-link-hover-color:    $list-group-link-color !default;
 
 $list-group-link-active-color:   $list-group-color !default;
@@ -908,9 +908,9 @@ $breadcrumb-padding-y:          .75rem !default;
 $breadcrumb-padding-x:          1rem !default;
 $breadcrumb-item-padding:       .5rem !default;
 
-$breadcrumb-bg:                 $brand-primary;
-$breadcrumb-divider-color:      #fff;
-$breadcrumb-active-color:       $breadcrumb-divider-color;
+$breadcrumb-bg:                 $gray-lightest;
+$breadcrumb-divider-color:      $gray-light !default;
+$breadcrumb-active-color:       $gray-light !default;
 $breadcrumb-divider:            "/" !default;
 
 
